--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "PRINCEMD",
   "description": "whatsapp user bot",
   "repository": "https://github.com/DASTAGHIR/PRINCEMD",
-  "logo": "https://qu.ax/igJFS.png",
+  "logo": "https://qu.ax/doEao.jpg",
   "success_url": "https://github.com/DASTAGHIR/PRINCEMD",
   "keywords": [
     "nodejs", "heroku", "bot", "urdu", "english", "indonesian", "arab", "portuguese", "italian", "french", "whatsapp",
